--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -82,3 +82,7 @@
   }
 }
 
+body {
+  position: relative;
+  height: 100vh;
+}
