--- a/src/app/components/image-modal/image-modal.component.scss
+++ b/src/app/components/image-modal/image-modal.component.scss
@@ -4,7 +4,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 80vw; /* Set the width of the modal */
-  max-width: 800px; /* Set a maximum width */
+  max-width: 900px; /* Set a maximum width */
   background-color: #fff;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
